--- a/form.html
+++ b/form.html
@@ -7,9 +7,8 @@
     <br>
     <label for="email">email: </label>
     <input type="email" name="email"  required>
-    <br>
-    <label for="password">password: </label>
-    <input type="password" name="password"  required>
-    <br>
+   
     <input type="submit" value="Login!">
 </form>
+<h4>Cambios</h4>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nesciunt similique aut, culpa cum voluptates cumque iusto illo tenetur officiis quis laudantium veritatis, nulla quasi minus itaque aperiam accusamus. Eius ex quisquam repellendus ad culpa cumque voluptatibus eligendi repellat ipsa temporibus! Debitis adipisci consequatur incidunt labore asperiores delectus officiis laborum sit, velit assumenda praesentium molestias, enim officia. Natus eius expedita laudantium cupiditate accusantium accusamus, esse iste, aut quibusdam corrupti architecto sint debitis aliquid, sed reprehenderit. Repudiandae provident error eius nobis iste, earum porro magnam non cum nulla laborum eum rerum ipsa harum. Atque, at odit consequuntur tenetur, modi, eaque enim quos illo excepturi soluta voluptatem? Laboriosam quidem illum tenetur inventore, necessitatibus eius fugit! Cum odit laboriosam molestias doloribus, omnis sunt explicabo asperiores dignissimos, minima nisi architecto atque earum sapiente minus placeat quia officiis dolore soluta? Magni perferendis inventore soluta quaerat, quasi quae expedita est praesentium voluptas, hic animi eos ad voluptatibus odio deserunt quidem a. Dignissimos dolor vero, eius rerum necessitatibus ipsa ea iusto a sequi ullam distinctio aliquid ad ab quasi facere nesciunt similique voluptas adipisci nihil deleniti. Enim excepturi nihil neque ad amet iure quasi ea quisquam! Dolorum ipsa laboriosam minus. Exercitationem laboriosam maxime porro eaque, excepturi ipsa.</p>
